# ardu-serial

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.org  ardu-serial.c  ardu-serial.h  arduserial.c  config.h  config.h.in  config.status  configure  configure.ac  serialread.c  testarduserial.c
info/: arduserial.texi
libarduserial/: Makefile.am  arduserial.c  arduserial.h  arduserialtools.c  arduserialtools.h  tools.c  tools.h
man/man3/: ardu-serial
testsuite/: Makefile.am  testdef.h
testsuite/arduserial/: Makefile.am  testarduserial.c  testautodetect.c  testflush.c  testinit.c  testlistarduinos.c  testpathopt.c  testreadln.c
testsuite/testarduserial/: testarduserial.exp
testsuite/tools/: Makefile.am  teststack.c
